Fixes missalignment in buttons

--- a/source/sass/component/_button.scss
+++ b/source/sass/component/_button.scss
@@ -1,7 +1,8 @@
 // BUTTON
 .c-button {
-    display: inline-block;
+    display: inline-flex;
     vertical-align: middle;
+    align-items: center;
     text-decoration: none;
     cursor: pointer;
     line-height: 1;
